--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -12,7 +12,7 @@ on:
         description: "Push GitHub"
         type: boolean
         required: true
-        default: false
+        default: true
       coding:
         description: "Push Coding"
         type: boolean
@@ -24,8 +24,8 @@ on:
         required: true
         default: false
   schedule:
-    # 每月3号2:37分开始执行（北京时间+8）
-    - cron: "37 2 3 * *"
+    # 每周一2:37分开始执行（北京时间+8）
+    - cron: "37 2 * * 1"
 
 jobs:
   build:
